[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mode.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Mode" parent="." instance=ExtResource( 2 )]

[node name="TempLayer" type="Node2D" parent="."]
z_index = 1

[node name="DrawLayer" type="Node2D" parent="."]
z_index = 1
[connection signal="draw_mode" from="Mode" to="." method="_on_Mode_draw_mode"]
[connection signal="mode" from="Mode" to="." method="_on_Mode_mode"]
